# genesis

./: .dockerignore  .gitignore  ABOUT.md  BUILD_LOG.md  CLAUDE.md  CONTRIBUTING.md  Decay  Decay.c  Decay.makefile  Decay_01exo.c  Decay_02nls.c  Decay_03lsy.c  Decay_04set.c  Decay_05evt.c  Decay_06inz.c  Decay_07dly.c  Decay_08bnd.c  Decay_09alg.c  Decay_10asr.c  Decay_11mix.c  Decay_12jac.c  Decay_12jac.h  Decay_13opt.c  Decay_13opt.h  Decay_14lnz.c  Decay_15syn.c  Decay_16dae.c  Decay_16dae.h  Decay_17inl.c  Decay_18spd.c  Decay_functions.c  Decay_functions.h  Decay_info.json  Decay_init.xml  Decay_model.h  Decay_records.c  Decay_res.mat  Dockerfile  GIT_START.md  GROK_BUILD_GENESIS_UNIVERSE_EXPLORER.md  (+21 more)
.github/workflows/: ci.yml  crew-claude.yml  deploy.yml  goldset-live.yml
.harness/: grok_type.py
__main__2_out/reports/: driver_scaling_report.html  inputs.html  n2.html  opt_report.html
__main__3_out/reports/: driver_scaling_report.html  inputs.html  n2.html  opt_report.html
__main__4_out/reports/: driver_scaling_report.html  inputs.html  n2.html  opt_report.html
__main__5_out/reports/: inputs.html  opt_report.html
__main___out/reports/: inputs.html  opt_report.html
data/: vision_catalog.yaml
docs/: 4_LINSEN_PRINZIP.md  AUDIT_2026-07-04.md  AUDIT_2026-07-15_GENESIS_MISSING.md  BACKLOG_TODO_PLAN.md  BUILD_HISTORY.md  BUILD_LOG.md  CADQUERY_VENV.md  CAPABILITIES.md  CLAUDE_CODE_AUFTRAG_001.md  DOC_CODE_DRIFT.md  EXTERNAL_INTEGRATION.md  FORSCHUNG_AUTONOMES_ERFINDEN_2026-06-19.md  FULL_MODULE_SWEEP_2026-07-13.md  FULL_MODULE_SWEEP_2026-07-13.results.json  FULL_MODULE_SWEEP_2026-07-13_v2.md  FULL_MODULE_SWEEP_2026-07-13_v2.results.json  GENESIS_PLATFORM_BUILD_TODO.md  GENESIS_PLATFORM_PLAN.md  GENESIS_TODO.md  HORIZON.md  IMPORT_CYCLES.md  INVENTOR_ARCHITEKTUR.md  ISLAND_TRIAGE_2026-07-11.md  LESSONS.md  LIVE_RUN_EVAL_2026-07-13.md  MERGE_PLAN_WORKTREE_2026-07-05.md  MODELL_KATALOG_EXTERN_2026-06-19.md  OPEN_MODULES_FULL_LIST.md  REALITAETSCHECK_DREAM_2026-06-19.md  REWORK_CAMPAIGN.md  ROADMAP_HUMANOID_DISCOVERY.md  SELF_IMPROVEMENT_2026-07-13.md  SELF_IMPROVE_FREEZE_2026-07-14.md  SELF_IMPROVE_LOOP_LIVE.md  SESSION_HANDOFF_2026-07-12.md  SESSION_HANDOFF_2026-07-13.md  SESSION_HANDOFF_2026-07-14.md  STATUS.md  SYSTEMATIC_BACKLOG_REPORT_2026-07-15.md  THE_WELL_PROBE.md  (+2 more)
docs/agents/: architect.md  conductor.md  scholar.md  scout.md  skeptic.md  synthesizer.md
docs/architecture/: MODULE_CONTRACT.md  RD_SYSTEM.md  SIMULATION_CONTRACT.md  SOURCE_CONNECTORS.md
docs/audit/: AETHON_SHELLS_2026-06-24.md  DEPTH_AUDIT_AETHON_HYDRAULICS.md  DEPTH_AUDIT_AETHON_MECHANICS.md  DEPTH_AUDIT_active_resolution.md  DEPTH_AUDIT_active_search.md  DEPTH_AUDIT_actuation.md  DEPTH_AUDIT_architekt.md  DEPTH_AUDIT_assumption_annihilator.md  DEPTH_AUDIT_bench_test_runner.md  DEPTH_AUDIT_benchmark.md  DEPTH_AUDIT_bolted_joint.md  DEPTH_AUDIT_boundary_reviser.md  DEPTH_AUDIT_breakthrough_watch.md  DEPTH_AUDIT_campaign.md  DEPTH_AUDIT_chip_selection.md  DEPTH_AUDIT_circuit.md  DEPTH_AUDIT_clarification.md  DEPTH_AUDIT_cli.md  DEPTH_AUDIT_competitive_humanoid.md  DEPTH_AUDIT_composition.md  DEPTH_AUDIT_concept_utility.md  DEPTH_AUDIT_controller.md  DEPTH_AUDIT_cosmic_insight.md  DEPTH_AUDIT_designer.md  DEPTH_AUDIT_development_front.md  DEPTH_AUDIT_fem.md  DEPTH_AUDIT_fem3d.md  DEPTH_AUDIT_fem3d_quadratic.md  DEPTH_AUDIT_fertigungs.md  DEPTH_AUDIT_flight.md  DEPTH_AUDIT_fracture.md  DEPTH_AUDIT_frontier.md  DEPTH_AUDIT_future_ideas.md  DEPTH_AUDIT_geometry_verification.md  DEPTH_AUDIT_goldset.md  DEPTH_AUDIT_grounding_integrity.md  DEPTH_AUDIT_identity_research.md  DEPTH_AUDIT_inventor_loop.md  DEPTH_AUDIT_inverse_design.md  DEPTH_AUDIT_kinematics.md  (+49 more)
docs/discovery/: STATUS.md
docs/integration/: CATALOG.md  EXTRACTION_BOTTLENECK.md  LIVE_RUN.md  PHASE1_TRUSTCORE.md  PHASE2_ANAMNESIS.md  PHASE3_CONSENSUS.md  PHASE4_AUDIT.md  PHASE_L2_RECALL_DRIFT.md  PHASE_L_LIVE_WIRING.md  PHASE_T3_ARXIV.md  PHASE_T3_SMT.md  PRINTFORGE_INVENTORY.md  PROOF_OF_VALUE.md  SESSION_HANDOFF.md
docs/phases/: PHASE_ALPHA.md  PHASE_ALPHA_RESULT.md  PHASE_BETA.md  PHASE_BETA_RESULT.md  PHASE_DELTA.md  PHASE_GAMMA.md  (+3 more)
goldset/: v1.json
scripts/: build_aethon_assets.py  check_build.py  find_islands.py  gen_status.py  grok_review.sh  live_council_run.py  live_smoke.py  nightly_goldset_live.sh  postgres_smoke.py  self_improve_smoke.sh  setup_cadquery_venv.sh  start-genesis-web.ps1  verify_cli_launch.py
sql/: 001_ledger.sql  002_embeddings.sql
tests/: test_active_resolution_characterization.py  test_active_search.py  test_active_search_characterization.py  test_actuation.py  test_actuation_characterization.py  test_aero_drone_calibration.py  test_architect.py  test_architekt.py  test_architekt_characterization.py  test_archive.py  test_arxiv_backend.py  test_assembly_constraints_h5.py  test_assembly_no_empty_stl.py  test_assembly_site.py  test_assumption_annihilator_characterization.py  test_audit_2026_07_16_fixes.py  test_audited_run_recall.py  test_bench_test_runner_characterization.py  test_benchmark_characterization.py  test_bolted_joint.py  test_bolted_joint_characterization.py  test_boundary_reviser.py  test_boundary_reviser_characterization.py  test_bracket_fem.py  test_breakthrough_bridge.py  test_breakthrough_watch_characterization.py  test_brep.py  test_brep_stl.py  test_buckling.py  test_build123d.py  test_bundle.py  test_cad_assembly.py  test_cadquery_bridge_integration.py  test_calculix_integration.py  test_calibration.py  test_cam_package.py  test_campaign.py  test_campaign_characterization.py  test_campaign_cross_domain.py  test_canonical.py  (+390 more)
verification/: 4LINSEN_PIPELINES_SEAMS_REVIEW_2026-06-21.md  CodeKnowledge-epsilon-zeta-auto-seams.md  CodeKnowledge-gamma-plus-real-derive.md  CodeKnowledge-initial.md  CodeKnowledge-runner-integ-e2e-certs.md  CodeKnowledge.md  E2E_CERT_CHAIN_TEST_PLAN.md  OMEGA_WIRING_CODE_KNOWLEDGE.md  auto-log.md  autonomous-plan.md  clone-instructions.md  handoff-to-claude.md  hermes-remaining-work-plan.md  hermes-routing-plan.md  setup-commands.md  verification-log.md
(+37 files in other folders)
