[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-engine"
version = "0.1.0"
description = "GENESIS - anti-hallucination idea-to-verified-specification engine: every claim sourced, every derivation recomputed, honest gaps instead of invention."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",          # the delta physics engine (FEM, validators, assessment)
    "sympy>=1.12",          # the math-research branch: symbolic identity fingerprint + proof (gen.identity_research)
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29"]      # the local UI (python -m gen.web / genesis-web)
cad = ["cadquery>=2.4", "gmsh>=4.12"]          # exact BREP geometry + unstructured FEM meshes
postgres = ["asyncpg>=0.29"]                   # persistent ledger (in-memory is the default)
verify = ["trust-core>=0.1.0"]                 # conformal/FDR single-source + CCDD drift (gen.verification.trustcore_adapter / drift_monitor); core stays numpy-only
smt = ["z3-solver>=4.13"]                       # global constraint feasibility (gen.verification.constraint_smt); closes the transitive-infeasibility gap
dev = ["pytest>=8", "ruff>=0.4", "httpx>=0.27"]
full = ["genesis-engine[web,cad,postgres,verify,smt,dev]"]

[project.scripts]
genesis = "gen.cli:main"
genesis-web = "gen.web.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gen.web" = ["static/*.html"]
